--- a/DBMS project/Index.html
+++ b/DBMS project/Index.html
@@ -38,6 +38,7 @@
     <footer>
         <div class="copyright">
             <h3>VASP</h3>
+            <p>This is copyrighted</p>
         </div>
     </footer>
 </body>
