--- a/DBMS project/Index.html
+++ b/DBMS project/Index.html
@@ -39,6 +39,7 @@
         <div class="copyright">
             <h3>VASP</h3>
             <p>This is copyrighted</p>
+            <p>this is also copyrighted</p>
         </div>
     </footer>
 </body>
