--- a/DBMS project/Index.html
+++ b/DBMS project/Index.html
@@ -38,7 +38,8 @@
     <footer>
         <div class="copyright">
             <h3>VASP</h3>
-            <p>This is copyrighted</p>
+            <p>Copyright &#169. All rights reserved.</p>
+            <ul class="social"></ul>
         </div>
     </footer>
 </body>
