--- a/DBMS project/Index.html
+++ b/DBMS project/Index.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index CSS</title>
-    <link rel="stylesheet" href="/Project2_CSS/style.css">
+    <link rel="stylesheet" href="/DBMS project/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
     <div class="login_box">
-        <img src="/Project2_CSS/images/avatar.png" alt="Error" height="170">
+        <img src="/DBMS project/images/avatar.png" alt="Error" height="170">
         <h3>Login</h3>
         <form method="POST">
             <div class="txtbox">
@@ -25,21 +26,18 @@
             <div>
                 <input type="submit" value="Sign in">
             </div>
-            <br><br>
+            <br>
             <div class="forgot">
                 Forgot Password ?
             </div>
-            <div class="signup">
-                Not a member? <a href="#">Sign up</a>
-            </div>
+
         </form>
     </div>
 
     <footer>
-        <div class="copyright">
-            <h3>VASP</h3>
-            <p>Copyright &#169. All rights reserved.</p>
-            <ul class="social"></ul>
+        <h3 class="footnote">VASP</h3>
+        <div class="footer-content">
+            <span>Copyright &copy;. All rights reserved.</span>
         </div>
     </footer>
 </body>
