--- a/DBMS project/Index.html
+++ b/DBMS project/Index.html
@@ -35,9 +35,9 @@
     </div>
 
     <footer>
-        <h3 class="footnote">VASP</h3>
+        <!-- <span class="footnote"><u>VASP</u></span> -->
         <div class="footer-content">
-            <span>Copyright &copy;. All rights reserved.</span>
+            <span>Copyright &copy;. VASP and co. All rights reserved.</span>
         </div>
     </footer>
 </body>
