--- a/DBMS project/Index.html
+++ b/DBMS project/Index.html
@@ -11,8 +11,13 @@
 </head>
 
 <body>
+
+    <div class="title">
+        <u><b>V A S P</b></u>
+    </div>
+
     <div class="login_box">
-        <img src="/DBMS project/images/avatar.png" alt="Error" height="170">
+        <img src="/DBMS project/images/avatar3.png" alt="Error" height="120">
         <h3>Login</h3>
         <form method="POST">
             <div class="txtbox">
