homepage elements added (not completely)

--- a/DBMS project/HomePage/homepage.html
+++ b/DBMS project/HomePage/homepage.html
@@ -5,17 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="homepage.css">
     <title>Homepage</title>
 </head>
 <body>
     <header>
         <div class="left">
-            <img src="images/VASP title red.png" alt="Error Logo image" height="40px">
+            <img src="images/VASP title red.png" alt="Error Logo image" height="55px">
         </div>
-        <div class="right"><a href="#" class="logout_btn">Logout</a>></div>
+        <div class="right">
+            <button class="b1">Logout</button>
+        </div>
     </header>
     <div class="navbar">
-
+        <img src="images/avatar.png" alt="ProfilePic" class="ProfilePic">
+        <h4>Varun</h4>
+        <br>
+        <div class="options">
+            <a href="#"><i class="fas fa-info-circle"></i><span> Information center</span></a>
+            <a href="#"><i class="fas fa-id-badge"></i><span> Profile</span></a>
+            <a href="#"><i class="fas fa-book"></i><span> Academics</span></a>
+            <a href="#"><i class="fas fa-pencil-alt"></i><span> Examinations</span></a>
+            <a href="#"><i class="fas fa-hand-holding-heart"></i><span> Conselor</span></a>
+        </div>
+        
     </div>
 </body>
 </html>
