nothing special forgot to add some text

--- a/DBMS project/HomePage/homepage.html
+++ b/DBMS project/HomePage/homepage.html
@@ -19,7 +19,7 @@
     </header>
     <div class="navbar">
         <img src="images/avatar.png" alt="ProfilePic" class="ProfilePic">
-        <h4>Varun</h4>
+        <h4>ID_Name</h4>
         <br>
         <div class="options">
             <a href="#"><i class="fas fa-info-circle"></i><span> Information center</span></a>
