Landing page (Homepage) made, can login and connect to it now. some elements(psotitioning of name and elements of nevbar require better psotioning schemes)

--- a/DBMS project/HomePage/homepage.html
+++ b/DBMS project/HomePage/homepage.html
@@ -9,7 +9,11 @@
     <title>Homepage</title>
 </head>
 <body>
+    <input type="checkbox" id="bars">
     <header>
+        <label for="bars">
+            <i class="fas fa-bars" id="navbarbtn"></i>
+        </label>
         <div class="left">
             <img src="images/VASP title red.png" alt="Error Logo image" height="55px">
         </div>
@@ -22,13 +26,16 @@
         <h4>ID_Name</h4>
         <br>
         <div class="options">
-            <a href="#"><i class="fas fa-info-circle"></i><span> Information center</span></a>
-            <a href="#"><i class="fas fa-id-badge"></i><span> Profile</span></a>
-            <a href="#"><i class="fas fa-book"></i><span> Academics</span></a>
-            <a href="#"><i class="fas fa-pencil-alt"></i><span> Examinations</span></a>
-            <a href="#"><i class="fas fa-hand-holding-heart"></i><span> Conselor</span></a>
+            <a href="#"><i class="fas fa-info-circle"></i><span>Information center</span></a>
+            <a href="#"><i class="fas fa-id-badge"></i><span>Profile</span></a>
+            <a href="#"><i class="fas fa-book"></i><span>Academics</span></a>
+            <a href="#"><i class="fas fa-pencil-alt"></i><span>Examinations</span></a>
+            <a href="#"><i class="fas fa-hand-holding-heart"></i><span>Conselor</span></a>
         </div>
-        
+    </div>
+
+    <div class="content">
+        <img src="images/background_hp.jpg" alt="error laoding bg">
     </div>
 </body>
 </html>
