--- a/DBMS project/HomePage/homepage.html
+++ b/DBMS project/HomePage/homepage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="homepage.css">
     <title>Homepage</title>
 </head>
+
 <body>
     <input type="checkbox" id="bars">
     <header>
@@ -30,7 +32,7 @@
             <a href="#"><i class="fas fa-id-badge"></i><span>Profile</span></a>
             <a href="#"><i class="fas fa-book"></i><span>Academics</span></a>
             <a href="#"><i class="fas fa-pencil-alt"></i><span>Examinations</span></a>
-            <a href="#"><i class="fas fa-hand-holding-heart"></i><span>Conselor</span></a>
+            <a href="#"><i class="fas fa-hand-holding-heart"></i><span>Counsellor</span></a>
         </div>
     </div>
 
@@ -38,4 +40,5 @@
         <img src="images/background_hp.jpg" alt="error laoding bg">
     </div>
 </body>
+
 </html>
