few minor changes

--- a/DBMS project/Index/Index.html
+++ b/DBMS project/Index/Index.html
@@ -34,6 +34,9 @@
                 <input type="submit" value="Sign in">
             </div>
             <br>
+            <div class="error">
+                <p>Invalid</p>
+            </div>
             <div class="forgot">
                 Forgot Password ?
             </div>
